# damurbano

./: .gitignore  README.md
practicaDjango/: db.sqlite3  pyproject.toml
practicaDjango/myapp/: models.py  urls.py  views.py
practicaDjango/myapp/migrations/: 0001_initial.py  0002_task_delete_cliente.py
practicaDjango/mysite/: settings.py  urls.py
